--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,3 +38,9 @@
     </div>
   </div>
 </div>
+
+<div class="button-bottom">
+  <button mat-fab color="primary" aria-label="Add Button" class="my-add-fab" (click)='createInputSwal()'>
+    <mat-icon>add</mat-icon>
+  </button>
+</div>
