--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,8 +22,11 @@
               <td mat-cell *matCellDef="let element"> {{element.createdAt | date:'short'}} </td>
             </ng-container>
             <ng-container matColumnDef="delete">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-primary"> Joined On</th>
-              <td mat-cell *matCellDef="let element"> {{element.createdAt | date:'short'}} </td>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-primary"> </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab color="warn" aria-label="Delete button">
+                <mat-icon>delete</mat-icon>
+              </button> </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
