--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
             <ng-container matColumnDef="delete">
               <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-primary"> </th>
               <td mat-cell *matCellDef="let element">
-                <button mat-mini-fab color="warn" aria-label="Delete button">
+                <button mat-mini-fab color="warn" aria-label="Delete button" (click)='confirmDeleteLink(element.link)'>
                 <mat-icon>delete</mat-icon>
               </button> </td>
             </ng-container>
