--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,10 @@
               <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-primary"> ID </th>
               <td mat-cell *matCellDef="let element" matTooltip="{{element.link}}" > {{element.link}} </td>
             </ng-container>
-
+            <ng-container matColumnDef="expiration">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-primary"> Expiration Date</th>
+              <td mat-cell *matCellDef="let element"> {{element.expiration | date:'short'}} </td>
+            </ng-container>
             <ng-container matColumnDef="createdAt">
               <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-primary"> Joined On</th>
               <td mat-cell *matCellDef="let element"> {{element.createdAt | date:'short'}} </td>
