--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,13 @@
                 <mat-icon>delete</mat-icon>
               </button> </td>
             </ng-container>
+            <ng-container matColumnDef="uexpiration">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-primary"> </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab color="warn" aria-label="Delete button" (click)='createDateSwal()'>
+                <mat-icon>delete</mat-icon>
+              </button> </td>
+            </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -50,3 +57,5 @@
     <mat-icon>add</mat-icon>
   </button>
 </div>
+
+
