--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="protected">
   <div class="col-md-12">
     <div class="card">
       <div class="card-header" data-aos="fade-up">
